[package]
name = "live-object-gcounter"
authors = ["Jihoon Song <jihoonsong.dev@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "GPLv3"

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units=1
panic = "abort"
overflow-checks = true
